# mvm

./: .gitmodules  Cargo.toml  README.md
LICENSE/: header.txt
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml  uml.md
core/src/: architecture.rs  bitfield.rs  cpu.rs  dmacro.rs  etc.rs  hart.rs  instruction.rs  isa_module.rs  lib.rs  machine.rs  memory.rs  opcode.rs  register.rs
core/src/rv32/: rv32i.rs
pmacro/: Cargo.toml
pmacro/src/: enum_alias.rs  enum_aliases.rs  lib.rs
pmacro/tests/: integration.rs  mod.rs
