[package]
name = "monologvm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
monologvm-pmacro = { path = "../pmacro" }

anyhow = "1.0.89"                                                 # Better error handling.
bitfield = "0.17.0"                                               # Bitfield manipulation.
crossbeam = "0.8.4"                                                # Tools for concurrent programming.
derive_more = { version = "1.0.0", features = ["full"] }           # New derive rules for newtypes, structs and enums; including From, Into, Display, Debug,
itertools = "0.13.0"                                              # Extra iterator adaptors, functions and macros.
phf = { version = "0.11.2", features = ["macros"] }               # library to generate efficient lookup tables at compile time. Used in the register module.
proc-macro2 = "1.0.86"                                            # Better proc-macro support.
quote = "1.0.37"                                                  # Quasi-quoting macro quote!.
syn = { version = "2.0.77", features = ["full", "extra-traits"] } # Parsing library for Rust code.
